# header-slice

./: Cargo.toml
src/: header_slice.rs  header_vec.rs  lib.rs  pair.rs  slice.rs  utils.rs  vec.rs
src/test/: add.rs  cmp.rs  create_vec.rs  drop.rs  insert.rs  misc.rs  mod.rs  remove.rs  resize.rs
